Modified some fields and added the  field to the database; updated via Flyway V7.